[Ostrava] Some EDA fixes and improvements

--- a/lessons/pydata/pandas/index.ipynb
+++ b/lessons/pydata/pandas/index.ipynb
@@ -355,7 +355,7 @@
    "source": [
     "Sloupce i řádky mají tzv. index, s jehož pomocí se dá k jednotlivým částem tabulky přistoupit. V našem případě má každý řádek automaticky doplněný unikátní číselný index (ten bezejmenný sloupec nalevo) a jako index pro sloupce nám poslouží prvni řádek CSV souboru s názvy sloupců.\n",
     "\n",
-    "Později se naučíme idexy měnit a vkládat do nich i více než jednu hodnotu."
+    "Později se naučíme indexy měnit a vkládat do nich i více než jednu hodnotu."
    ]
   },
   {
@@ -2768,7 +2768,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tohle nejsou ani zdaleka všechny možnosti manipulace s daty, které Pandas umožňuje, ale pro začátek to bude stačit. Další si ukážeme během explorační datové analýzy v následujících kapitolách."
+    "Tohle nejsou ani zdaleka všechny možnosti manipulace s daty, které Pandas umožňuje, ale pro začátek to bude stačit. Další si ukážeme během explorační datové analýzy v následujících kapitolách.\n",
+    "\n",
+    "Pokud si chceš výsledky svých experimentů uložit do souboru, stačí použít metodu `to_csv()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"vysledky_pokusu.csv\")"
    ]
   },
   {
@@ -2812,7 +2823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
