--- a/lessons/pydata/pandas_groupby/index.ipynb
+++ b/lessons/pydata/pandas_groupby/index.ipynb
@@ -30,24 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "%matplotlib inline"
    ]
   },
@@ -295,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x12c1d7450>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x11a4be7d0>"
       ]
      },
      "execution_count": 7,
@@ -1429,16 +1412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x10e2c43d0>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x1183b1090>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1464,7 @@
        " 11734      Begich       Mark 1962-03-30      M  sen    AK     Democrat)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,27 +1500,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Ondřej', 29), ('Královna Alžběta', 93), ('Maggie Simpson', 1)]\n",
-      "[('Ondřej', 29), ('Královna Alžběta', 93), ('Maggie Simpson', 1)]\n",
-      "[('Ondřej', 29), ('Královna Alžběta', 93), ('Maggie Simpson', 1)]\n"
+      "('Ondřej', 29)\n",
+      "('Královna Alžběta', 93)\n",
+      "('Maggie Simpson', 1)\n"
      ]
     }
    ],
    "source": [
     "for element in data:\n",
-    "    print(data)"
+    "    print(element)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1574,7 @@
        " 11734      Begich       Mark 1962-03-30      M  sen    AK     Democrat)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1621,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1613,7 @@
        "'AK'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1842,7 @@
        "11734      Begich       Mark 1962-03-30      M  sen    AK     Democrat"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,18 +1860,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "target_directory = 'po_statech'\n",
-    "os.mkdir(target_directory)"
+    "os.makedirs(target_directory, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1971,7 @@
        "AZ    1816-01-24 1976-11-03"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2022,7 @@
        "Name: party, Length: 11981, dtype: bool"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2155,7 @@
        "[116 rows x 1 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,90 +2164,6 @@
     "legislators_historical.groupby([\n",
     "    legislators_historical.state,\n",
     "    legislators_historical.party.isnull()])[['last_name']].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>last_name</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>state</th>\n",
-       "      <th>party</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">AK</th>\n",
-       "      <th>False</th>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>True</th>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">AL</th>\n",
-       "      <th>False</th>\n",
-       "      <td>206.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>True</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AR</th>\n",
-       "      <th>False</th>\n",
-       "      <td>115.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             last_name\n",
-       "state party           \n",
-       "AK    False       14.0\n",
-       "      True         2.0\n",
-       "AL    False      206.0\n",
-       "      True         NaN\n",
-       "AR    False      115.0"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "legislators_historical.groupby([\n",
-    "    legislators_historical.state,\n",
-    "    legislators_historical.party.isnull()])[['last_name']].count().head()"
    ]
   },
   {
@@ -2278,7 +2177,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: .str, .dt, pd.cut, pd.qcut"
+    "### .str a .dt metody\n",
+    "\n",
+    "https://pandas.pydata.org/pandas-docs/stable/user_guide/text.html#string-methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "groupby str.lower() to dedup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# name_length = legislators_historical.first_name.str.len()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1745.0\n",
+       "1        1742.0\n",
+       "2        1743.0\n",
+       "3        1730.0\n",
+       "4        1739.0\n",
+       "          ...  \n",
+       "11976    1950.0\n",
+       "11977    1951.0\n",
+       "11978    1987.0\n",
+       "11979    1944.0\n",
+       "11980    1976.0\n",
+       "Name: birthday, Length: 11981, dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "birth_years = legislators_historical.birthday.dt.year\n",
+    "\n",
+    "birth_years#.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x11df0e5d0>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legislators_historical.groupby(birth_years)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binning\n",
+    "\n",
+    "cut, qcut, value_counts s prepinacem"
    ]
   },
   {
