--- a/lessons/pydata/pandas_groupby/index.ipynb
+++ b/lessons/pydata/pandas_groupby/index.ipynb
@@ -1183,7 +1183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Více o (pokročileší) práci s indexi a multiindexi najdeš v [dokumentaci](https://pandas.pydata.org/pandas-docs/stable/user_guide/advanced.html).\n",
+    "Více o (pokročileší) práci s indexy a multiindexy najdeš v [dokumentaci](https://pandas.pydata.org/pandas-docs/stable/user_guide/advanced.html).\n",
     "\n",
     "Pokud bychom se chtěli multiindexu \"zbavit\", můžeme to udělat pomocí `.reset_index()`"
    ]
