od ondry: https://pydata-kurz-praha.slack.com/archives/GSPS5BFML/p1582126857021100

--- a/lessons/pydata/pandas_groupby/index.ipynb
+++ b/lessons/pydata/pandas_groupby/index.ipynb
@@ -4,21 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EDA 5: Pokročilejší manipulace a statistika\n",
+    "# EDA 5: Pokročilejší manipulace a agregace\n",
     "\n",
-    "* Práce s indexy\n",
-    "* Segmentace, agregace, groupby, pivot\n",
-    "* ~~Elementární optimalizace (%timeit)~~\n",
-    "* ~~Pokročilejší vizualizace se seaborn~~\n",
-    "* ~~Základy statistických testů~~\n",
-    "* Data: IMDB+...?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nějaká motivace:\n",
+    "\n",
+    "Další čtení pro dlouhé večery v tomto ročním období:\n",
     "* https://github.com/alanderex/pydata-pandas-workshop/tree/master/notebooks\n",
     "* https://github.com/TomAugspurger/pandas-head-to-tail/blob/master/notebooks/03-Iterators-Groupby.ipynb\n",
     "* https://realpython.com/pandas-groupby/"
@@ -269,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x11535b150>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x120763e10>"
       ]
      },
      "execution_count": 5,
@@ -474,7 +463,7 @@
        "Whig           564\n",
        "Federalist     343\n",
        "Jackson        338\n",
-       "Name: last_name, dtype: int64"
+       "dtype: int64"
       ]
      },
      "execution_count": 9,
@@ -484,7 +473,7 @@
    ],
    "source": [
     "# řešení\n",
-    "legislators_historical.groupby(\"party\")['last_name'].count().sort_values(ascending=False).head(5)"
+    "legislators_historical.groupby(\"party\").size().sort_values(ascending=False).head(5)"
    ]
   },
   {
@@ -498,6 +487,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "scrolled": false,
     "solution": "hidden"
    },
    "outputs": [
@@ -1437,7 +1427,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x105350b50>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x10e4c11d0>"
       ]
      },
      "execution_count": 21,
@@ -1896,12 +1886,92 @@
    "metadata": {},
    "source": [
     "## Další agregační funkce\n",
-    "nejen count"
+    "\n",
+    "Dosud jsme agregovali jen pomocí `.size` nebo `.count`, ale existuje spousta další agregačních metod, zejm. těch numerických.\n",
+    "\n",
+    "Pro snadnější práci s agregacemi budeme používat metodu `.agg`, která akceptuje slovník. Tento slovník udává, *co* chceme agregovat (klíč) a *jak* to chceme agregovat (hodnota). S tím, že způsobů agregace pro jeden sloupec může být více naráz. Ukážeme si."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>birthday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AK</th>\n",
+       "      <td>1962-03-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AL</th>\n",
+       "      <td>1967-10-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AR</th>\n",
+       "      <td>1968-08-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AS</th>\n",
+       "      <td>1943-08-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AZ</th>\n",
+       "      <td>1976-11-03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        birthday\n",
+       "state           \n",
+       "AK    1962-03-30\n",
+       "AL    1967-10-09\n",
+       "AR    1968-08-21\n",
+       "AS    1943-08-15\n",
+       "AZ    1976-11-03"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legislators_historical.groupby('state').agg({'birthday': 'max'}).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1930,14 +2000,17 @@
        "    <tr>\n",
        "      <th></th>\n",
        "      <th colspan=\"2\" halign=\"left\">birthday</th>\n",
+       "      <th>party</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
        "      <th>min</th>\n",
        "      <th>max</th>\n",
+       "      <th>nunique</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>state</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -1947,56 +2020,54 @@
        "      <th>AK</th>\n",
        "      <td>1848-09-17</td>\n",
        "      <td>1962-03-30</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AL</th>\n",
        "      <td>1780-01-30</td>\n",
        "      <td>1967-10-09</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AR</th>\n",
        "      <td>1788-08-25</td>\n",
        "      <td>1968-08-21</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AS</th>\n",
        "      <td>1937-03-13</td>\n",
        "      <td>1943-08-15</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AZ</th>\n",
        "      <td>1816-01-24</td>\n",
        "      <td>1976-11-03</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        birthday           \n",
-       "             min        max\n",
-       "state                      \n",
-       "AK    1848-09-17 1962-03-30\n",
-       "AL    1780-01-30 1967-10-09\n",
-       "AR    1788-08-25 1968-08-21\n",
-       "AS    1937-03-13 1943-08-15\n",
-       "AZ    1816-01-24 1976-11-03"
+       "        birthday              party\n",
+       "             min        max nunique\n",
+       "state                              \n",
+       "AK    1848-09-17 1962-03-30       3\n",
+       "AL    1780-01-30 1967-10-09       8\n",
+       "AR    1788-08-25 1968-08-21       5\n",
+       "AS    1937-03-13 1943-08-15       1\n",
+       "AZ    1816-01-24 1976-11-03       3"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "legislators_historical.groupby('state').agg({'birthday': ['min', 'max']}).head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "co je moznyho s agg?"
+    "legislators_historical.groupby('state').agg({'birthday': ['min', 'max'], 'party': 'nunique'}).head()"
    ]
   },
   {
@@ -2014,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2105,7 @@
        "Name: party, Length: 11981, dtype: bool"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2151,7 @@
        "Length: 91, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,28 +2175,162 @@
    "source": [
     "### .str a .dt metody\n",
     "\n",
-    "https://pandas.pydata.org/pandas-docs/stable/user_guide/text.html#string-methods"
+    "Podobně jako můžeme testovat zda hodnoty existují, můžeme testovat různé vlastnosti stringů a dat (od slova datum). Slouží k tomu [.str](https://pandas.pydata.org/pandas-docs/stable/user_guide/text.html#string-methods) a [.dt](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.dt.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         7\n",
+       "1        10\n",
+       "2         7\n",
+       "3         6\n",
+       "4         6\n",
+       "         ..\n",
+       "11976     5\n",
+       "11977     6\n",
+       "11978     5\n",
+       "11979     4\n",
+       "11980     6\n",
+       "Name: first_name, Length: 11981, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_length = legislators_historical.first_name.str.len()\n",
+    "name_length"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "groupby str.lower() to dedup"
+    "Často používanými metodami v rámci `.str` je contains nebo `.lower/upper`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1     True\n",
+       "2     True\n",
+       "3    False\n",
+       "4    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# name_length = legislators_historical.first_name.str.len()"
+    "names = pd.Series(['JOHN', 'Jean-Luc', 'Mary-Jane', 'Kate', 'John'])\n",
+    "names.str.contains('-')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     Jean-Luc\n",
+       "2    Mary-Jane\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names[names.str.contains('-')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zatímco `.str.contains` použijeme zpravidla na filtrování, `.lower` poslouží třeba na unifikaci dat, která se pak lépe agregují (a deduplikují)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mary-Jane    1\n",
+       "John         1\n",
+       "Jean-Luc     1\n",
+       "JOHN         1\n",
+       "Kate         1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "john         2\n",
+       "mary-jane    1\n",
+       "jean-luc     1\n",
+       "kate         1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names.str.lower().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Z `.dt` si ukážeme jak vytáhnout z data rok."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2145,7 +2350,7 @@
        "Name: birthday, Length: 11981, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,16 +2363,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x10534e850>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x10e4c1c10>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2187,7 +2392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2197,16 +2402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x115eb5550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11fa92750>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2229,7 +2434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2454,7 @@
        "Name: birth_year, Length: 258, dtype: Int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2269,7 +2474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2288,7 +2493,7 @@
        "Name: birth_year, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2306,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {
     "scrolled": false
    },
@@ -2329,7 +2534,7 @@
        "Categories (5, interval[int64]): [(1700, 1750] < (1750, 1800] < (1800, 1850] < (1850, 1900] < (1900, 1950]]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2341,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2560,7 @@
        "Name: birth_year, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2373,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2591,7 @@
        "Name: birth_year, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2677,7 @@
        "3  sen      M   1799"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2496,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2551,7 +2756,7 @@
        "M       9947  1799"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2571,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2701,7 +2906,7 @@
        "[172 rows x 4 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2723,7 +2928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2860,7 +3065,7 @@
        "DE           48.0      49"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2875,7 +3080,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kdyby ti přišlo matoucí, že tu jsou dvě podobné funkce na kontigenční tabulky, tak tě ještě víc zmateme, protože existuje ještě `pd.crosstab`. TODO"
+    "Kdyby ti přišlo matoucí, že tu jsou dvě podobné funkce na kontigenční tabulky, tak tě ještě víc zmateme, protože existuje ještě `pd.crosstab`. Do detailů zde už zacházet nebudeme, doporučujeme [dokumentaci](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.crosstab.html)."
    ]
   },
   {
@@ -2893,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2974,7 +3179,7 @@
        "3   West  1000  1040   500    10    10"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3000,7 +3205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3178,7 +3383,7 @@
        "19   West  2020      10"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3221,7 +3426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
