--- a/lessons/pydata/pandas_groupby/index.ipynb
+++ b/lessons/pydata/pandas_groupby/index.ipynb
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x120763e10>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x10ab2bc10>"
       ]
      },
      "execution_count": 5,
@@ -381,7 +381,7 @@
    "source": [
     "Vidíme, že v datech je zaznamenáno 1830 senátorů a 10151 kongresmanů. Na levé straně v indexu vidíme skupiny, podle kterých se dataset agregoval a do sloupců se daly všechny sloupce, na které bylo možné aplikovat naši agregační funkci (v tom případě na všechny zbylé).\n",
     "\n",
-    "Z čísel si můžeme všimnout, že u některých chybí údaje o datu narození nebo straně.\n",
+    "Z čísel si můžeš všimnout, že u některých chybí údaje o datu narození nebo straně.\n",
     "\n",
     "Než aplikujeme krok *apply*, můžeme si vybrat, na který ze sloupců tak učiníme, trochu si tím zpřehledníme výstup. Pokud si vybereme jen jeden sloupec, dostaneme Series."
    ]
@@ -1427,7 +1427,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x10e4c11d0>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x1194bf710>"
       ]
      },
      "execution_count": 21,
@@ -1481,7 +1481,7 @@
    "source": [
     "groups = legislators_historical.groupby('state')\n",
     "\n",
-    "next(iter(groups))"
+    "next(iter(groups)) # timhle ziskame prvni element pri iteraci (for cyklu)"
    ]
   },
   {
@@ -2214,7 +2214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Často používanými metodami v rámci `.str` je contains nebo `.lower/upper`"
+    "Často používanými metodami v rámci `.str` je `contains` nebo `.lower/upper`"
    ]
   },
   {
@@ -2280,11 +2280,11 @@
     {
      "data": {
       "text/plain": [
-       "Mary-Jane    1\n",
+       "Kate         1\n",
+       "JOHN         1\n",
        "John         1\n",
        "Jean-Luc     1\n",
-       "JOHN         1\n",
-       "Kate         1\n",
+       "Mary-Jane    1\n",
        "dtype: int64"
       ]
      },
@@ -2369,7 +2369,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x10e4c1c10>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x108c708d0>"
       ]
      },
      "execution_count": 41,
@@ -2408,7 +2408,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11fa92750>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x118eb6650>"
       ]
      },
      "execution_count": 43,
@@ -3426,7 +3426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
