text for excercises

--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -16,34 +16,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Diabetes.\n",
+    "1. **Diabetes**. Prohlédněte si následující náhled dat a navrhněte,\n",
+    "jak byste predikovali progress nemoci u nového pacienta.\n",
     "\n",
+    " - Můžete si úlohu převést na úlohu s krajinou, co budou souřadnice a co bude výška krajiny?\n",
+    " - Jak budete měřit úspěsnot predikce?\n",
+    " - Jak posoudíte, zda se vám úlohu podařilo dostatečně zvládnout?\n",
     " \n",
-    "    bmi, progress\n",
-    "    bmi, neco, progress\n",
+    "  ...\n",
+    " \n",
+    " ![dataset_preview](static/diabetes.png)\n",
+    " \n",
     "\n",
-    "1. plocha mesta, pocet obyvatel - viz excercise.ipynb \n",
+    "2. **Populace**. Stáhněte si notebook [excercise.ipynb](static/excercise.ipynb),\n",
+    " je v něm vypracovaná úloha predikce počtu obyvatel v závislosti \n",
+    " na velikosti oblasti/města. Naučený model (*krabička*) ale počet\n",
+    " obyvatel často podhodnocuje.\n",
     "  \n",
     "   Prohlédněte si řešení v notebooku a zkuste přijít na to,\n",
-    "   co děláme v prvním případě špatně.\n",
+    "   co děláme špatně. \n",
     "\n",
-    "1. vek, vyska cloveka\n",
     "\n",
-    "1. vek, pohlavi, vyska cloveka\n",
+    "3. **Výška**. Máte k dispozici data obsahující věk a výšku člověka. Jak budete postupovat, budete-li chtít predikovat věk na základě výšky.\n",
     "\n",
-    "1. vek, pohlavi, velikost mesta, vyska cloveka\n",
     "\n",
-    "1. velikost mesta, iq, vyska cloveka\n",
+    "4. **Výška II**. K předešlé úloze dostaneme navíc informaci o pohlaví.\n",
+    "Využijeme ji?\n",
     "\n",
-    "1. rodne cislo, vek\n",
     "\n",
-    "1. pocet splnenych ukolu, pocet absenci, uz pracovala pred kurzem s daty, pravdepodobnost ze najde praci s daty\n",
+    "5. **Výška III**. Tentokrát data obsahují kromě věku, pohlaví, výšky, také velikost města, kde dotyčná osoba žije. Bude se nám další proměnná hodit?\n",
     "\n",
-    "1. pocet splnenych ukolu, pocet absenci, uz pracovala pred kurzem s daty, bude/nebude pracovat s daty\n",
+    "6. **IQ** Stále chceme predikovat výšku, máme však tentokrát k dispozici pouze velikost města, kde osoba žije, a její IQ.\n",
     "\n",
-    "1. categoricka prom. vice moznosti\n",
+    "7. **Věk**. Máme nového šéfa. V rámci zefektivnění evidence zaměstnanců chce vytvořit model, který bude pro hodnotu rodné čísla vracet věk. Co bude vstupem a výstupem, jak budeme postupovat?\n",
     "\n",
-    "1. hromada CV (text) uchazec: seznam skillu, delka praxe, .... , vyska platu\n"
+    "8. **PyLadies** Máte k dispozici statistiku účastnic PyLadies. Počet splních úkolů, počty absencí, zda PyLady už pracovala před kurzem s daty. Co potřebujete k tomu, abyste na základě těchto informací byly schopné predikovat pravděpodobnost, že daná účastnice najde po kurzu práci jako datová analytička.\n",
+    "\n",
+    "9. **TODO** Něco na kategorické proměnné, víc než dvě hodnoty ... aby to vedlo na vymýšlení one-hot-encoding.\n",
+    "\n",
+    "10. **Personalista** Dostali jste hromadu CV uchazečů. Chtěli byste vytvořit model, který na základě údajů ze životopisu navrhne vhodný plat."
    ]
   },
   {
@@ -55,6 +66,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
