--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -9,7 +9,9 @@
     "Následující příklady nejsou na programování. Pouze si popovídáme o tom, jak byste danou situaci pomocí\n",
     "strojového učení řešily. \n",
     "\n",
-    "Míč je na vaší straně. Nebojte se navrhnout cokoli vám bude připadat dobré, koučové vás případně usměrní. \n"
+    "Míč je na vaší straně. Nebojte se navrhnout cokoli vám bude připadat dobré, koučové vás případně usměrní. \n",
+    "\n",
+    "*Pozn. pro kouče: "
    ]
   },
   {
