ntb with excercise added

--- a/lessons/pydata/regression_exercises/index.ipynb
+++ b/lessons/pydata/regression_exercises/index.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Míč je na vaší straně. Nebojte se navrhnout cokoli vám bude připadat dobré, koučové vás případně usměrní. \n",
     "\n",
-    "*Pozn. pro kouče: "
+    "*Pozn. pro kouče: nebude se nic programovat, příklady jsou určeny k diskuzi o tom, co všechno je potřeba (metrika, baseline řešení, atd.), jaké sloupečky vybrat jako příznaky, apod.*"
    ]
   },
   {
